# RNNSim

./: .isort.cfg  CHANGELOG.md  LICENSE.md  Makefile  README.md  index.md  mkdocs.yml  pyproject.toml  pytest.ini
docs/: examples.md  index.md
examples/: iris_classification_rnn.py  simple_addition_rnn.py  wine_classification_rnn.py
rnnsim/: RNN.py  __init__.py  __main__.py  model.py  utils.py
tests/: conftest.py
